Allow Sending and Receiving Tasks in Multiple Parent Organizations
Feasibility request tasks need the local organization having the role
'HRP' in exactly 1 parent organization.

Feasibility execute tasks can be received from different remote
organizations and the local organization which are having the role 'HRP'
configured in exactly one parent organization.

The configuration of FHIR stores for executing feasibility resources has
moved to a configuration yaml file.

Multiple FHIR stores are now allowed for executing a feasibility query.
All results are added up to a single result, optionally obfuscated and
sent back to the requester.